--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/support": "^6.0",
+    "illuminate/support": "^6.0|^7.0",
     "spatie/laravel-webhook-server" : "^1.4"
   },
   "require-dev": {
-    "orchestra/testbench": "^4.0",
+    "orchestra/testbench": "^4.0|^5.0",
     "phpunit/phpunit": "^8.0"
   },
   "autoload": {
