--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "illuminate/support": "^6.0|^7.0|^8.0",
-    "spatie/laravel-webhook-server": "^1.4"
+    "php": "^8.0",
+    "illuminate/support": "^8.5|^9.0",
+    "spatie/laravel-webhook-server": "^3.1"
   },
   "require-dev": {
     "orchestra/testbench": "^4.0|^5.0",
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^9.3.0"
   },
   "autoload": {
     "psr-4": {
